# example

./: WORKSPACE
haskell/exe/: BUILD.bazel
haskell/src/: BUILD.bazel
haskell/test/: AppSpec.hs  BUILD.bazel  Spec.hs
